// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Modal Default 1`] = `
.c2 {
  margin-bottom: 8px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c1 {
  box-sizing: border-box;
  padding: 20px;
  border: 0;
  background: #FFFFFF;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  margin: 4px 0 0 16px;
  padding: 0;
  border: 0;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  margin-left: auto;
}

.c9 {
  max-height: 50vh;
  overflow-y: auto;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:768px) {
  .c5 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: rgba(110,110,105,0.63);
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }
}

@media (max-width:767px) {
  .c1 {
    width: 100%;
    height: 100%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 480px;
    top: 50%;
    left: 50%;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
    -webkit-transform: translate(-50%,0%);
    -ms-transform: translate(-50%,0%);
    transform: translate(-50%,0%);
    opacity: 0;
    -webkit-transition: -webkit-transform 0.3s ease-in,opacity 0.3s ease-in;
    -webkit-transition: transform 0.3s ease-in,opacity 0.3s ease-in;
    transition: transform 0.3s ease-in,opacity 0.3s ease-in;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    opacity: 1;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onScrollCapture={[Function]}
      onTouchMoveCapture={[Function]}
      onWheelCapture={[Function]}
    >
      <div
        aria-label="Dialog information"
        className="c1"
        role="dialog"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <div
              className="c4"
            >
              <h2
                className="c5"
                type="title2"
              >
                Dialog information
              </h2>
            </div>
            <div
              className="c6 c4"
            >
              <button
                className="c7"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="false"
                  className="c8"
                  focusable="false"
                  role="img"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="15.739 12 24 20.062 19.969 24 12 16.223 4.031 24 0 20.062 8.261 12 0 3.938 4.031 0 12 7.777 19.969 0 24 3.938"
                  />
                  <title>
                    Close this dialog
                  </title>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          className="c9"
        >
          <div
            className="c2"
          >
            <p
              className="c10"
              type="primary"
            >
              Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
            </p>
          </div>
          <div
            className="c2"
          >
            <p
              className="c10"
              type="primary"
            >
              That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
            </p>
          </div>
          <div
            className="c2"
          >
            <p
              className="c10"
              type="primary"
            >
              Nielsen/Norman has an excellent article about their usage here
            </p>
          </div>
          <p
            className="c10"
            type="primary"
          >
            <a
              href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
            >
              https:// www.nngroup.com/articles/modal-nonmodal-dialog/
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    className="c11"
  />
</div>
`;

exports[`Storyshots Molecules | Modal Uncontrolled behavior 1`] = `
.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
</div>
`;

exports[`Storyshots Molecules | Modal Without header 1`] = `
.c2 {
  margin-bottom: 8px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  box-sizing: border-box;
  padding: 20px;
  border: 0;
  background: #FFFFFF;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  margin: 4px 0 0 16px;
  padding: 0;
  border: 0;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  margin-left: auto;
}

.c8 {
  max-height: 50vh;
  overflow-y: auto;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:768px) {
  .c10 {
    background-color: rgba(110,110,105,0.63);
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }
}

@media (max-width:767px) {
  .c1 {
    width: 100%;
    height: 100%;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 480px;
    top: 50%;
    left: 50%;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
    -webkit-transform: translate(-50%,0%);
    -ms-transform: translate(-50%,0%);
    transform: translate(-50%,0%);
    opacity: 0;
    -webkit-transition: -webkit-transform 0.3s ease-in,opacity 0.3s ease-in;
    -webkit-transition: transform 0.3s ease-in,opacity 0.3s ease-in;
    transition: transform 0.3s ease-in,opacity 0.3s ease-in;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    opacity: 1;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onScrollCapture={[Function]}
      onTouchMoveCapture={[Function]}
      onWheelCapture={[Function]}
    >
      <div
        className="c1"
        role="dialog"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <div
              className="c4 c5"
            >
              <button
                className="c6"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="false"
                  className="c7"
                  focusable="false"
                  role="img"
                  size={5}
                  viewBox="0 0 24 24"
                >
                  <polygon
                    points="15.739 12 24 20.062 19.969 24 12 16.223 4.031 24 0 20.062 8.261 12 0 3.938 4.031 0 12 7.777 19.969 0 24 3.938"
                  />
                  <title>
                    Close this dialog
                  </title>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          className="c8"
        >
          <div
            className="c2"
          >
            <p
              className="c9"
              type="primary"
            >
              Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
            </p>
          </div>
          <div
            className="c2"
          >
            <p
              className="c9"
              type="primary"
            >
              That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
            </p>
          </div>
          <div
            className="c2"
          >
            <p
              className="c9"
              type="primary"
            >
              Nielsen/Norman has an excellent article about their usage here
            </p>
          </div>
          <p
            className="c9"
            type="primary"
          >
            <a
              href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
            >
              https:// www.nngroup.com/articles/modal-nonmodal-dialog/
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    className="c10"
  />
</div>
`;
